--- a/mods/stamina/mod.conf
+++ b/mods/stamina/mod.conf
@@ -1,2 +1,7 @@
 name = stamina
 depends = base
+optional_depends = 3d_armor, player_monoids, pova, lucky_block
+description = Adds stamina, hunger and drunk effects.
+release = 10749
+author = TenPlus1
+title = Stamina (Fork)
